fix: Scrollbars not colored correctly in Firefox
Firefox colors scrollbars depending on the `background-color` property of the body. The color that would be derived from a `background` directive is not effective. Thus, these themes need to be adjusted to define the `background-color` explicitly.

--- a/res/theme_tombstone.css
+++ b/res/theme_tombstone.css
@@ -12,7 +12,7 @@
 /* ******************* GAME ******************* */
 /* ******************************************** */
 body.scheme_tombstone {
-	background: #27282c;
+	background-color: #27282c;
 	color-scheme: dark;
 }
 .scheme_tombstone #gamePageContainer,
